changed newInstanceOf method to avoid exceptions escaping compile-time checking